@@ -1,5 +1,7 @@
 From version 0.3.9 to 0.3.10
 - subscriber plugin provider registration management.
+- minor update for GNU conventions.
+- moved more stack configuration into base object.
 
 From version 0.3.8 to 0.3.9
 - man page for daemon admin support shell utility.
